v.1.8 ТЗ 16: Реализованы запросы вещей, вынесена валидация в gateway, проект разделён на модули